
syntax = "proto3";

package helloworld;

message HelloRequest {
	string name = 1;
}
  
 message HelloReply {
	string message = 1;
}

service HelloService {
	rpc SayHello (HelloRequest) returns (HelloReply) {}
}

